# workout-heatmap

./: README.md  app.js  package-lock.json  package.json  server.js  slowburn.db  workouts.db
lib/: workout-utils.js
public/: app.js  index.html  styles.css
scripts/: build-sidecar.sh  bundle-resources.sh  install-app.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/redirect/: index.html
src-tauri/src/: lib.rs
tests/: workout-utils.test.js
