[package]
name = "slowburn-desktop"
version = "0.1.0"
description = "Slowburn desktop wrapper"
authors = ["Grant Hall"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
